<resources>
    <string name="app_name">Calculadora</string>
    <string name="hello">Hello World!</string>

    <string name="c">C</string>
    <string name="mais_menos">+/-</string>
    <string name="perc">%</string>
    <string name="div">/</string>
    <string name="mult">X</string>
    <string name="soma">+</string>
    <string name="sub">-</string>
    <string name="igual">=</string>
    <string name="ponto">.</string>

    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="zero">0</string>
</resources>
