<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/preto"
    tools:context="br.com.cotemig.aula01.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="48sp"
            android:gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/c"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/mais_menos"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/perc"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/div"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/sete"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn07"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/oito"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn08"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/nove"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/mult"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            android:id="@+id/btn09"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/quatro"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn04"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/cinco"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn05"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/seis"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn06"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/soma"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/um"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn01"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/dois"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn02"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/tres"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn03"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/sub"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            android:id="@+id/buttonSub"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/zero"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btn00"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/ponto"
            android:backgroundTint="@color/laranja"
            android:textSize="30dp"
            android:id="@+id/btnPonto"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/branco"
            android:background="@color/preto"
            android:text="@string/igual"
            android:backgroundTint="@color/cinza"
            android:textSize="30dp"
            android:id="@+id/btnIgual"
            />
    </LinearLayout>





</LinearLayout>
